# juicysfplugin

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  PRIVACY.txt  README.md  build-windows.md  building.fat-bin.md  building.md  building.win32.md  juicysfplugin.jucer  win32.Dockerfile  win32.arm.Dockerfile
.github/workflows/: main.yml  release.yml
Builds/CLion/: CMakeLists.txt  Debug-Info-AU.plist  Debug-Info-Standalone_Plugin.plist  Release-Info-AU.plist  Release-Info-Standalone_Plugin.plist  Release-Info-VST.plist
Builds/License/: License.vcxitems
Builds/Linux/: Makefile
Builds/MacOSX/: .gitignore  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist  Juicy.icns  archive-for-distribution.sh  how to install.txt  libfluidsynth.1.7.1.dylib  libglib-2.0.0.dylib  libpcre.1.dylib  make_portable.sh  relink-build-for-distribution.sh  relink_libs.sh
Builds/MacOSX/include/: fluidsynth.h
Builds/MacOSX/juicysfplugin.xcodeproj/: project.pbxproj
Builds/MacOSX/juicysfplugin.xcodeproj/xcshareddata/xcschemes/: juicysfplugin - AU.xcscheme  juicysfplugin - All.xcscheme  juicysfplugin - Shared Code.xcscheme  juicysfplugin - Standalone Plugin.xcscheme  juicysfplugin - VST.xcscheme  juicysfplugin - VST3.xcscheme
Builds/MacOSX/lib/: libFLAC.8.dylib  libfluidsynth.1.7.2.dylib  libfluidsynth.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libintl.8.dylib  libogg.0.dylib  libpcre.1.dylib  libsndfile.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib
Builds/MacOSX/lib_relinked/: libFLAC.8.dylib  libfluidsynth.1.7.2.dylib  libfluidsynth.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libintl.8.dylib  libogg.0.dylib  libpcre.1.dylib  libsndfile.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib
Builds/Setup/: .gitignore  Setup.vdproj
Builds/Setup/Debug/: Setup.msi
Builds/VisualStudio2017/: .gitignore  build-windows.md  juicysfplugin.sln  juicysfplugin_SharedCode.vcxproj  juicysfplugin_SharedCode.vcxproj.filters  juicysfplugin_StandalonePlugin.vcxproj  juicysfplugin_StandalonePlugin.vcxproj.filters  juicysfplugin_VST.vcxproj  juicysfplugin_VST.vcxproj.filters  juicysfplugin_VST3.vcxproj  juicysfplugin_VST3.vcxproj.filters  license_concatenated.rtf  license_concatenated.txt  make_concatenated_license.sh  resources.rc
Builds/VisualStudio2017/licenses_of_dependencies/: libgcc_runtime_libraries_GPL3_with_GCC_runtime_library_exception.txt  libportaudio_bespoke.txt  libspeex_revised_BSD.txt  libwinpthreads_BSD_and_MIT.txt
Builds/WixSetup/: .gitignore  Config.wxi  MyWelcomeEulaDlg.wxs  Product.wxs  WixSetup.wixproj  WixUI_MyMinimal.wxs
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: BankAndPreset.cpp  BankAndPreset.h  CMakeLists.txt  ExposesComponents.h  FilePicker.cpp  FilePicker.h  FilePickerFragment.h  FluidSynthModel.cpp  FluidSynthModel.h  GuiConstants.h  MidiConstants.h  MyColours.cpp  MyColours.h  Param.cpp  Param.h  Params.cpp  Params.h  Pill.cpp  Pill.h  Pills.cpp  Pills.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.cpp  Preset.h  PresetsToBanks.h  RjManualCallQueue.cpp  RjManualCallQueue.h  SharesParams.h  SlidersComponent.cpp  SlidersComponent.h  SlidersFragment.h  SoundfontSynthSound.cpp  SoundfontSynthSound.h  SoundfontSynthVoice.cpp  SoundfontSynthVoice.h  State.cpp  State.h  (+11 more)
VST2_SDK/: README.md
cmake/Modules/: FindPkgConfig.cmake  Findfluidsynth.cmake
distribute/: README.x64.txt  README.x86.txt  bundle_win32.sh
include/: fluidsynth.h
include/fluidsynth/: version.h
llvm-scripts/: build_fluidsynth.sh  clone_fluidsynth.sh  clone_juce.sh  configure_alsa.sh  configure_fluidsynth.sh  configure_juicysfplugin.sh  get_fluidsynth_deps_linux.sh  get_juicy_deps_linux.sh  get_juicy_deps_win32.sh  linux_amd64_toolchain.cmake  linux_arm64_toolchain.cmake  linux_i386_toolchain.cmake  make_alsa.sh  make_juce.sh  make_juicysfplugin.sh  multi-arch-apt.sh  win32_aarch64_toolchain.cmake  win32_i686_toolchain.cmake
llvm-scripts/alsa/: clone_alsa.sh  configure_alsa.sh  install_alsa.sh  make_alsa.sh
llvm-scripts/fluidsynth/: configure_fluidsynth.sh  install_fluidsynth.sh  make_fluidsynth.sh
llvm-scripts/freetype/: clone_freetype.sh  configure_freetype.sh  install_freetype.sh  make_freetype.sh
llvm-scripts/juce/: clone_juce.sh  make_juce.sh
llvm-scripts/juicysfplugin/: configure_juicysfplugin.sh  make_juicysfplugin.sh
llvm-scripts/opus/: clone_opus.sh  configure_opus.sh  install_opus.sh  make_opus.sh
llvm-scripts/sndfile/: clone_sndfile.sh  configure_sndfile.sh  install_sndfile.sh  make_sndfile.sh
llvm-scripts/toolchain/: linux_amd64_toolchain.cmake  linux_arm64_toolchain.cmake  linux_i386_toolchain.cmake  win32_x86_64_toolchain.cmake
win32_cross_compile/: FindPkgConfig.cmake  aarch64_toolchain.cmake  attrib.sh  attrib_noop.sh  build_fluidsynth.sh  build_winmeta.sh  clone_fluidsynth.sh  clone_juce.sh  clone_wine.sh  clone_winmeta.sh  configure_fluidsynth.sh  configure_juicysfplugin.sh  configure_wine.sh  download_llvm_mingw.sh  fix_mingw_headers.sh  get_fluidsynth_deps.sh  i686_toolchain.cmake  init.sh  install.sh  make_juce.sh  make_juicysfplugin.sh  make_minimal_fluidsynth.sh  make_wine.sh  x86_64_toolchain.cmake
